deploy/base/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: embassywatch-frontend
  labels:
    app: embassywatch
    component: frontend
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: embassywatch-frontend
    weight: 100
  port:
    targetPort: 8080
